@@ -11,6 +11,8 @@ Changelog for CinemaVision
 - change:  Issue #33 - Change demo content location
 - fix:     Issue #10 - When adding module sometimes jumps to the start
 - fix:     Issue #73 - iTunes scraper picking up clips
+- change:  Issue #74 - Remove 'Enabled: YES/NO' from settings display
+- fix:     Update demo music to point to a working stream
 
 [- 1.0.13 -]
 
